syntax = "proto3";

package Proto;

option go_package = "/gRPC";

message BidRequest{
  int32 amount = 1;
  int32 requestID = 2;
  string clientID = 3;
}

message BidResponse{
  bool success = 1;
}

message ResultRequest{
  int32 requestID = 1;
  string clientID = 2;
}

message ResultResponse{
  //if active TRUE returns "Auction over client x won with a bid of xxx"
  //else returns current bid amount to be parsed
  string result = 1;
  bool active = 2;
}

service BidAuctionClientFE{
  rpc SendBidRequest(BidRequest) returns (BidResponse){}
  rpc SendResultRequest(ResultRequest) returns (ResultResponse){}
}